fix(topic side panel): try removing bottom margin to fix overlap

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -2315,7 +2315,10 @@ div.interfaceLinks-row a {
   /* HACK: add grey background beyond bounding box of sidebar by utilizing negative margins! */
   border-top: 80px solid #FBFBFA;
   /*border-bottom: 120px solid #FBFBFA;*/
-  /*margin: -80px 0 -120px 0;*/
+  margin-top: -80px;
+  margin-right: 0px;
+  /*margin-bottom: -120px;*/
+  margin-left: 0px;
 }
 .topicPanel h1 {
   text-align: unset;
